将more添加上去

--- a/source/_posts/正式开发中的版本管理.md
+++ b/source/_posts/正式开发中的版本管理.md
@@ -11,6 +11,8 @@ tags: git cli
 但是这个好处会带来一些不便之处：就是你不加注意的话，很有可能会留下一个枝节曼生/四处开放的版本库。到处都是分支的脉络。
 下面有一种策略，它可以使得版本库演进保持简洁，主干清晰，各分支清晰各司其职，井井有条。
 
+<!-- more -->
+
 ##　一、主分支Master
 首先，代码库应该有一个，且有一个主分支。所有提供用户使用的正式版本，都在这个主分支上面发布。
 ![image](https://github.com/guimeisang/git/blob/master/img/bg1.png)
