--- a/source/_posts/周末生活系列之一.md
+++ b/source/_posts/周末生活系列之一.md
@@ -3,7 +3,12 @@ title: 周末生活系列之一
 date: 2017-01-08 18:16:33
 tags: 周末生活系列
 ---
-### 突然有段时间你会很想学做菜  
+### 突然有段时间你会很想学做菜   
+
+> 最近桂梅桑开始痴迷做饭，希望在过年的时候再去看看有什么新的做法，get这些技能。以后就可以自己想吃就可以自己做了
+
+<!--more-->
+
 - 辣椒酱油虾  
 材料： 辣椒（可以根据想吃的辣度，我一般喜欢比较辣的），蒜头，大蒜叶，老姜，8两虾米（两三人的量），酱油，鱼鼓油（李锦记的），鸡精。　 
 
