--- a/source/_posts/周日学做菜.md
+++ b/source/_posts/周日学做菜.md
@@ -4,9 +4,7 @@ date: 2016-12-18 23:51:26
 tags: 生活
 ---
 
-![上硬菜](http://oi9n0t0p1.bkt.clouddn.com/cook/cook.jpg)
-
-<!--more-->
+三个菜.jpg
 
 周末表妹过来  
 她依旧如此美丽，却多了些贤惠和能干  
